--- a/Samples/TelegramMonadsBasedBot/TelegramMonadsBasedBot.csproj
+++ b/Samples/TelegramMonadsBasedBot/TelegramMonadsBasedBot.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
@@ -21,6 +21,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.*"/>
         <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.2"/>
+        <ProjectReference Include="..\..\Botticelli.Framework\Botticelli.Framework.csproj" />
         <ProjectReference Include="..\..\Botticelli.Scheduler.Quartz\Botticelli.Scheduler.Quartz.csproj"/>
     </ItemGroup>
 
