- transform processor - monad bot works now

--- a/Botticelli.Framework.Monads/Botticelli.Framework.Monads.csproj
+++ b/Botticelli.Framework.Monads/Botticelli.Framework.Monads.csproj
@@ -44,6 +44,7 @@
 	</ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\Botticelli.Bot.Interfaces\Botticelli.Bot.Interfaces.csproj" />
+	  <ProjectReference Include="..\Botticelli.Framework.Controls\Botticelli.Framework.Controls.csproj" />
 	  <ProjectReference Include="..\Botticelli.Framework\Botticelli.Framework.csproj" />
 	</ItemGroup>
 </Project>
