--- a/Samples/TelegramMonadsBasedBot/TelegramMonadsBasedBot.csproj
+++ b/Samples/TelegramMonadsBasedBot/TelegramMonadsBasedBot.csproj
@@ -39,6 +39,12 @@
       <None Update="Media\voice.mp3">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Include="main_layout.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Include="start_layout.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
