--- a/Samples/TelegramMonadsBasedBot/TelegramMonadsBasedBot.csproj
+++ b/Samples/TelegramMonadsBasedBot/TelegramMonadsBasedBot.csproj
@@ -18,7 +18,7 @@
         <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.*"/>
         <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.2"/>
         <ProjectReference Include="..\..\Botticelli.Framework.Monads\Botticelli.Framework.Monads.csproj" />
-        <ProjectReference Include="..\..\Botticelli.Framework\Botticelli.Framework.csproj" />
+        <ProjectReference Include="..\..\Botticelli.Framework.Telegram\Botticelli.Framework.Telegram.csproj" />
     </ItemGroup>
 
     <ItemGroup>
