--- a/Samples/TelegramMessagingSample/appsettings.json
+++ b/Samples/TelegramMessagingSample/appsettings.json
@@ -6,10 +6,10 @@
     }
   },
   "DataAccess": {
-    "ConnectionString": "Filename=database.db;Password=123;ReadOnly=false"
+    "ConnectionString": "database.db;Password=123"
   },
   "Server": {
-    "ServerUri": "http://113.30.189.83:5042/v1/"
+    "ServerUri": "http://103.252.116.18:5042/v1/"
   },
   "AnalyticsClient": {
     "TargetUrl": "http://localhost:5251/v1/"
