PVS Studio code quality audit

--- a/Botticelli.Audio/Botticelli.Audio.csproj
+++ b/Botticelli.Audio/Botticelli.Audio.csproj
@@ -37,6 +37,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\3dParty\FileSignatures\FileSignatures.csproj"/>
+        <ProjectReference Include="..\Botticelli.Shared\Botticelli.Shared.csproj" />
     </ItemGroup>
 
 </Project>
