--- a/Tests/Botticelli.Framework.Vk.Tests/Botticelli.Framework.Vk.Tests.csproj
+++ b/Tests/Botticelli.Framework.Vk.Tests/Botticelli.Framework.Vk.Tests.csproj
@@ -42,4 +42,8 @@
         <ProjectReference Include="..\Shared\Shared.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Settings\" />
+    </ItemGroup>
+
 </Project>
