BOTTICELLI-58:  - successful payment processor

--- a/TelegramPayBot/appsettings.json
+++ b/TelegramPayBot/appsettings.json
@@ -16,7 +16,7 @@
   },
   "TelegramBot": {
     "timeout": 60,
-    "useThrottling": true,
+    "useThrottling": false,
     "useTestEnvironment": false,
     "name": "TestBot"
   },
